# trtrt

./: .gitignore  README.md  pyproject.toml
app/cornellbox/: imgui.ini  loader.py  main.py
app/room/: imgui.ini  loader.py  main.py
core/: __init__.py  bvh.py  camera.py  frontend.py  objects.py  records.py  scene.py
core/frontend_utils/: __init__.py  gui.py  input_tracer.py
core/geometry/: bvh.py  mesh.py
core/objects/: __init__.py  utils.py
core/postprocess/: __init__.py  bilateral_filter.py  gaussian_blur.py  post_processor.py
core/records/: gbuffer.py  velocity.py
core/renderer/: albedo.py  base.py  normal.py  path_tracer.py  sampler.py  utils.py  zbuffer.py
core/ui/: gui.py
core/utils/: __init__.py  abstract.py  const.py  loader.py
examples/cornellbox/: imgui.ini  loader.py  main.py  oidn.py
examples/rainbow/: imgui.ini  loader.py  main.py
examples/room/: imgui.ini  loader.py  main.py
src/trtrt/: camera.py  frontend.py  scene.py
src/trtrt/geometry/: __init__.py  bvh.py  geometry_data.py  mesh.py  parametric.py
src/trtrt/objects/: __init__.py  entities.py  lights.py  materials.py  pbr.py  utils.py
src/trtrt/postprocess/: __init__.py  bilateral_filter.py  gaussian_blur.py  hdr.py  post_processor.py  temporal_accumulation.py
src/trtrt/records/: __init__.py  hitinfo.py  velocity.py
src/trtrt/renderer/: __init__.py  base.py  blinn_phong.py  normal.py  path_tracer.py  ray_marching.py  sampler.py  utils.py
src/trtrt/ui/: __init__.py  builder.py  built_in.py  gui.py  input_tracer.py
src/trtrt/utils/: __init__.py  const.py  loader.py
(+2 files in other folders)
